deploy: 53fb8a8438fb2500bd3a4597fc24e96b114f8745

--- a/etc/reference.html
+++ b/etc/reference.html
@@ -261,6 +261,7 @@
 <li>
 <p>Simon Verstraete</p>
 <ul>
+<li>Simon is a tech Artist that loves building procedural tools and assets.</li>
 <li>https://www.youtube.com/@simonhoudini5074</li>
 <li>https://www.artstation.com/siver</li>
 </ul>
@@ -392,6 +393,18 @@
 <p><a href="https://qiita.com/jyouryuusui/items/ad15495a702ee957dbe8">ディニ子をつくる：Houdiniでキャラクターモデリング</a></p>
 <ul>
 <li>후디니 케릭터 모델링</li>
+</ul>
+</li>
+</ul>
+<h2 id="gdc"><a class="header" href="#gdc">GDC</a></h2>
+<p><a href="https://youtu.be/bCcmwdrSTvM">Game Development Made Easy Using Houdini | Paul Ambrosiussen | GDC 2018</a></p>
+<p>ref - <a href="https://youtu.be/H4r_69WNE9o">Video games Created using Houdini</a></p>
+<h2 id="ehoudini"><a class="header" href="#ehoudini">ehoudini</a></h2>
+<ul>
+<li>EHoudiniAcademy
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB5RKDYwf8pC2vNjGzVlAf6E">Foundation Module - Houdini 101</a></li>
+<li><a href="https://youtube.com/playlist?list=PLd959VTYXCB747UsN1EV8_bLUVEhhtL3i&amp;si=GiGtwdPQUTnznc2L">Foundation Module - The Foundation Project</a></li>
 </ul>
 </li>
 </ul>
