--- a/print.html
+++ b/print.html
@@ -1200,8 +1200,7 @@ Settings
 </li>
 </ul>
 <h2 id="sci-fi-level-design"><a class="header" href="#sci-fi-level-design"><a href="https://www.sidefx.com/learn/collections/sci-fi-level-design/">Sci Fi Level Design</a></a></h2>
-<ul>
-<li>SCI FI PANEL GENERATOR
+<h3 id="sci-fi-panel-generator"><a class="header" href="#sci-fi-panel-generator">SCI FI PANEL GENERATOR</a></h3>
 <ul>
 <li>PART 1 | MODELING THE PANEL
 <ul>
@@ -1357,8 +1356,26 @@ Settings
 </li>
 </ul>
 </li>
-<li>
-<h2 id="part-3--creating-the-digital-asset"><a class="header" href="#part-3--creating-the-digital-asset">PART 3 | CREATING THE DIGITAL ASSET</a></h2>
+<li>PART 3 | CREATING THE DIGITAL ASSET
+<ul>
+<li>HDA 설정</li>
+</ul>
+</li>
+</ul>
+<h3 id="sci-fi-crate-generator"><a class="header" href="#sci-fi-crate-generator">SCI FI CRATE GENERATOR</a></h3>
+<ul>
+<li>PART 1 | MODEL THE CRATE
+<ul>
+<li>Box / GameDev Axis Align / Null(IN)</li>
+<li>Boolean - Shatter로 뚜껑을 구분지음 - A-Only Piece
+<ul>
+<li>Grid - 0, bbox("../IN/", D_YSIZE) * 0.8</li>
+</ul>
+</li>
+<li>IN_Part_01
+<ul>
+<li>group / blast / polybevel / polyfill 로 윗단을 날리고 하단을 부드럽게 하고 윗단을 다시 채운다</li>
+</ul>
 </li>
 </ul>
 </li>
@@ -1465,6 +1482,7 @@ Settings
 <li>
 <p>Simon Verstraete</p>
 <ul>
+<li>Simon is a tech Artist that loves building procedural tools and assets.</li>
 <li>https://www.youtube.com/@simonhoudini5074</li>
 <li>https://www.artstation.com/siver</li>
 </ul>
@@ -1596,6 +1614,18 @@ Settings
 <p><a href="https://qiita.com/jyouryuusui/items/ad15495a702ee957dbe8">ディニ子をつくる：Houdiniでキャラクターモデリング</a></p>
 <ul>
 <li>후디니 케릭터 모델링</li>
+</ul>
+</li>
+</ul>
+<h2 id="gdc"><a class="header" href="#gdc">GDC</a></h2>
+<p><a href="https://youtu.be/bCcmwdrSTvM">Game Development Made Easy Using Houdini | Paul Ambrosiussen | GDC 2018</a></p>
+<p>ref - <a href="https://youtu.be/H4r_69WNE9o">Video games Created using Houdini</a></p>
+<h2 id="ehoudini"><a class="header" href="#ehoudini">ehoudini</a></h2>
+<ul>
+<li>EHoudiniAcademy
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLd959VTYXCB5RKDYwf8pC2vNjGzVlAf6E">Foundation Module - Houdini 101</a></li>
+<li><a href="https://youtube.com/playlist?list=PLd959VTYXCB747UsN1EV8_bLUVEhhtL3i&amp;si=GiGtwdPQUTnznc2L">Foundation Module - The Foundation Project</a></li>
 </ul>
 </li>
 </ul>
