--- a/game-engine/unity.html
+++ b/game-engine/unity.html
@@ -400,8 +400,7 @@
 </li>
 </ul>
 <h2 id="sci-fi-level-design"><a class="header" href="#sci-fi-level-design"><a href="https://www.sidefx.com/learn/collections/sci-fi-level-design/">Sci Fi Level Design</a></a></h2>
-<ul>
-<li>SCI FI PANEL GENERATOR
+<h3 id="sci-fi-panel-generator"><a class="header" href="#sci-fi-panel-generator">SCI FI PANEL GENERATOR</a></h3>
 <ul>
 <li>PART 1 | MODELING THE PANEL
 <ul>
@@ -557,8 +556,26 @@
 </li>
 </ul>
 </li>
-<li>
-<h2 id="part-3--creating-the-digital-asset"><a class="header" href="#part-3--creating-the-digital-asset">PART 3 | CREATING THE DIGITAL ASSET</a></h2>
+<li>PART 3 | CREATING THE DIGITAL ASSET
+<ul>
+<li>HDA 설정</li>
+</ul>
+</li>
+</ul>
+<h3 id="sci-fi-crate-generator"><a class="header" href="#sci-fi-crate-generator">SCI FI CRATE GENERATOR</a></h3>
+<ul>
+<li>PART 1 | MODEL THE CRATE
+<ul>
+<li>Box / GameDev Axis Align / Null(IN)</li>
+<li>Boolean - Shatter로 뚜껑을 구분지음 - A-Only Piece
+<ul>
+<li>Grid - 0, bbox("../IN/", D_YSIZE) * 0.8</li>
+</ul>
+</li>
+<li>IN_Part_01
+<ul>
+<li>group / blast / polybevel / polyfill 로 윗단을 날리고 하단을 부드럽게 하고 윗단을 다시 채운다</li>
+</ul>
 </li>
 </ul>
 </li>
