--- a/node/geometry/geo_node.html
+++ b/node/geometry/geo_node.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="kr" class="light" dir="ltr">
+<html lang="kr" class="light sidebar-visible" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
@@ -7,7 +7,7 @@
 
 
         <!-- Custom HTML head -->
-        
+
         <meta name="description" content="study.houdini">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
@@ -30,15 +30,17 @@
 
         <!-- Custom theme stylesheets -->
 
-    </head>
-    <body class="sidebar-visible no-js">
-    <div id="body-container">
+
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
-
+        <!-- Start loading toc.js asap -->
+        <script src="../../toc.js"></script>
+    </head>
+    <body>
+    <div id="body-container">
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
         <script>
             try {
@@ -60,19 +62,16 @@
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
-            var html = document.querySelector('html');
+            const html = document.documentElement;
             html.classList.remove('light')
             html.classList.add(theme);
-            var body = document.querySelector('body');
-            body.classList.remove('no-js')
-            body.classList.add('js');
+            html.classList.add("js");
         </script>
 
         <input type="checkbox" id="sidebar-toggle-anchor" class="hidden">
 
         <!-- Hide / unhide sidebar before it is displayed -->
         <script>
-            var body = document.querySelector('body');
             var sidebar = null;
             var sidebar_toggle = document.getElementById("sidebar-toggle-anchor");
             if (document.body.clientWidth >= 1080) {
@@ -82,45 +81,25 @@
                 sidebar = 'hidden';
             }
             sidebar_toggle.checked = sidebar === 'visible';
-            body.classList.remove('sidebar-visible');
-            body.classList.add("sidebar-" + sidebar);
+            html.classList.remove('sidebar-visible');
+            html.classList.add("sidebar-" + sidebar);
         </script>
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
-            <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../../Index.html">들어가며</a></li><li class="chapter-item expanded affix "><li class="part-title">제어</li><li class="chapter-item expanded "><a href="../../control/key.html">조작키</a></li><li class="chapter-item expanded "><a href="../../control/config.html">설정</a></li><li class="chapter-item expanded affix "><li class="part-title">File</li><li class="chapter-item expanded "><a href="../../file/file.html">파일</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../file/hda.html">hda</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">노드</li><li class="chapter-item expanded "><a href="../../node/geometry/geo_node.html" class="active">Geometry</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../node/geometry/geo_step.html">step</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">스크립트</li><li class="chapter-item expanded "><a href="../../script/script.html">스크립트</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../script/vex.html">VEX</a></li><li class="chapter-item expanded "><a href="../../script/python.html">Python</a></li><li class="chapter-item expanded "><a href="../../script/hscript.html">hscript</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">테크닉</li><li class="chapter-item expanded "><a href="../../technic/VAT.html">VAT</a></li><li class="chapter-item expanded "><a href="../../technic/landscape.html">landscape</a></li><li class="chapter-item expanded affix "><li class="part-title">게임엔진</li><li class="chapter-item expanded "><a href="../../game-engine/unity.html">유니티</a></li><li class="chapter-item expanded "><a href="../../game-engine/unreal.html">언리얼</a></li><li class="chapter-item expanded affix "><li class="part-title">기타</li><li class="chapter-item expanded "><a href="../../etc/reference.html">참고</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../etc/ta.html">TA</a></li></ol></li><li class="chapter-item expanded "><a href="../../etc/snippet.html">Snippet</a></li><li class="chapter-item expanded "><a href="../../etc/plugin.html">플러그인</a></li></ol>
-            </div>
+            <!-- populated by js -->
+            <mdbook-sidebar-scrollbox class="sidebar-scrollbox"></mdbook-sidebar-scrollbox>
+            <noscript>
+                <iframe class="sidebar-iframe-outer" src="../../toc.html"></iframe>
+            </noscript>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
             </div>
         </nav>
 
-        <!-- Track and set sidebar scroll position -->
-        <script>
-            var sidebarScrollbox = document.querySelector('#sidebar .sidebar-scrollbox');
-            sidebarScrollbox.addEventListener('click', function(e) {
-                if (e.target.tagName === 'A') {
-                    sessionStorage.setItem('sidebar-scroll', sidebarScrollbox.scrollTop);
-                }
-            }, { passive: true });
-            var sidebarScrollTop = sessionStorage.getItem('sidebar-scroll');
-            sessionStorage.removeItem('sidebar-scroll');
-            if (sidebarScrollTop) {
-                // preserve sidebar scroll position when navigating via links within sidebar
-                sidebarScrollbox.scrollTop = sidebarScrollTop;
-            } else {
-                // scroll sidebar to current active section when navigating via "next/previous chapter" buttons
-                var activeSection = document.querySelector('#sidebar .active');
-                if (activeSection) {
-                    activeSection.scrollIntoView({ block: 'center' });
-                }
-            }
-        </script>
-
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
-                                <div id="menu-bar-hover-placeholder"></div>
+                <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
                         <label id="sidebar-toggle" class="icon-button" for="sidebar-toggle-anchor" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
@@ -193,7 +172,7 @@
 <li>sphere</li>
 <li>box</li>
 <li>grid</li>
-<li>tube</li>
+<li>tube // cone을 만들때도 사용</li>
 <li>rubbertoy</li>
 <li>tommy</li>
 <li>platonic(tetrahedron/cube/octahedron/icosahedron/dodecahedron/soccerball/utahteapot)</li>
@@ -204,7 +183,7 @@
 <tr><td>Add</td><td>점 추가 // 모델에서 점만 남기기, 점으로 선만들기</td></tr>
 <tr><td>Ends</td><td>Face/Hull 탭과 같은 기능입니다</td></tr>
 <tr><td>Peak</td><td>Peak 노드는 프리미티브/포인트/에지/브레이크 포인트를 법선 방향으로 이동합니다</td></tr>
-<tr><td>Transform</td><td>트랜스폼 - 전체/그룹</td></tr>
+<tr><td>Transform</td><td>트랜스폼 - 전체/그룹 // Move Centeroid To Origin도 유용</td></tr>
 <tr><td>Edit</td><td>트렌스폼 -  컴포넌트 단위</td></tr>
 <tr><td>Delete</td><td>지우기 - 기능 더 많음</td></tr>
 <tr><td>Blast</td><td>지우기 - 간단한</td></tr>
@@ -212,6 +191,7 @@
 <tr><td>PolyBevel</td><td>비스듬한면(bevel), 선에 점을 추가하여 아치형으로 변경</td></tr>
 <tr><td>PolyPath</td><td>이어진 여러 라인을 하나의 라인으로 만듬</td></tr>
 <tr><td>PolyFrame</td><td>TangentName에 N을 넣는. TBN 구하기</td></tr>
+<tr><td>PolyFill</td><td>채우기</td></tr>
 <tr><td>Group</td><td>그룹핑 - 추가</td></tr>
 <tr><td>Group Expression</td><td>그룹핑 - 표현식으로 // Union with Existing</td></tr>
 <tr><td>Group Delete</td><td>그룹핑 - 삭제</td></tr>
@@ -228,7 +208,7 @@
 <tr><td>Attribute Create</td><td>Attribute - 생성 // 그룹에 대한 attribute 생성도 가능  // $PR 할당할때</td></tr>
 <tr><td>Attribute from Map</td><td>Attribute - 이미지로부터 attribute를 가져옴</td></tr>
 <tr><td>Attribute Promote</td><td>Attribute - 포인트 어트리뷰트를 프리미티브 어트리뷰트로 변환하는것 처럼 서로 다른 클래스로 어트리뷰트 전환이 가능</td></tr>
-<tr><td>Attribute Transfer</td><td>Attribute - 이전. 가까이 있는 Attribute를 가져온다</td></tr>
+<tr><td>Attribute Transfer</td><td>Attribute - 이전. // condition을 이용해서 거리에 따른 Attribute를 가져올 수 도 있다.</td></tr>
 <tr><td>Attribute Randomize</td><td>Attribute - 랜덤화</td></tr>
 <tr><td>Attribute VOP</td><td>Attribute - VOP 노드에는 자체는 키를 줄 수 없다 / VOP 노드 선택&gt; VEX/VOP Options&gt; Create Input Parameters</td></tr>
 <tr><td>Scatter</td><td>면에다 점찍기</td></tr>
@@ -236,12 +216,12 @@
 <tr><td>Resample</td><td>다시 표본화. 선에 점찍는 용도</td></tr>
 <tr><td>Polywire</td><td>와이어프레임</td></tr>
 <tr><td>Curve</td><td>간단한, 베이지어 커브</td></tr>
+<tr><td>Draw Curve</td><td>그릴 수 있지만, 거칠기에 Smooth를 같이 써주는게 좋다.</td></tr>
 <tr><td>Smooth</td><td>완만하게 해주는거 커브, 리셈플이랑 주로 같이 쓰임</td></tr>
 <tr><td>Carve</td><td>깍아내기 // uv로 선을 자름</td></tr>
 <tr><td>Sweep</td><td>선따라 길만들기</td></tr>
 <tr><td>Copy To Point</td><td>포인트들 위치로 복사</td></tr>
 <tr><td>Copy And Transform</td><td>갯수만큼 복사</td></tr>
-<tr><td>Mirror</td><td>좌우 대칭</td></tr>
 <tr><td>Foreach</td><td><a href="https://www.youtube.com/watch?v=xs5WezgOZlo">https://www.youtube.com/watch?v=xs5WezgOZlo</a></td></tr>
 <tr><td>Platonic Solids</td><td>Tetrahedron(4)/Cube(6)/Octahedron(8)/Icosahedron(20)/Dodecahedron(12)/Soccer ball(pentagonal b12 + w20)/Utah teapot</td></tr>
 <tr><td>Iso Offset</td><td>Builds an offset surface from geometry. // 볼륨변환  // Scatter랑 같이 쓰이기도함</td></tr>
@@ -254,16 +234,36 @@
 <tr><td>Skin</td><td>두 표면사이에 스킨을 씌워준다. // Keep primitives 로 원래 모양도 유지가능</td></tr>
 <tr><td>Sort</td><td>Point 나 Primitive를 정렬. Shaft/Offset을 이용 오프셋 작업 가능Ï</td></tr>
 <tr><td>Convert Line</td><td>포인트끼리 연결한 라인</td></tr>
-<tr><td>Revolve</td><td>중심 축을 중심으로 곡선을 회전하여 표면을 만듬</td></tr>
 <tr><td>Object Merge</td><td>외부 노드 불러오기</td></tr>
 <tr><td>Visualize Attribute</td><td>Attribute 기반 시각화</td></tr>
 <tr><td>Divide</td><td>Don't Generate Slivers/Avoid Small Angles 동시 체크 추천</td></tr>
 <tr><td>Clean</td><td></td></tr>
 <tr><td>Pack</td><td>게임엔진에서 별도의 메쉬로 취급</td></tr>
 <tr><td>Unique Points/Point Split</td><td>Splits points shared by multiple vertices, optionally only if the vertices differ in attribute value. / PolyWire랑 쓰면 좋음</td></tr>
+<tr><td>Paint</td><td>페인팅</td></tr>
 </tbody></table>
 </div>
-<p>Curve같은 경우 Assets &gt; Asset Definition Toolbar &gt; Show Always 로 이전 버전의 curve를 사용할 수 있다.</p>
+<ul>
+<li>이전 버전 노드가 안보일때는
+<ul>
+<li>Assets &gt; Asset Definition Toolbar &gt; Show Always</li>
+<li>예)
+<ul>
+<li>Curve</li>
+<li>Lab Cylinder Generator</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
+<tr><td>Merge</td><td>합치기. 필요에 따라 Fuse를 뒤에 붙여 중복 제거</td></tr>
+<tr><td>Soft Transform</td><td>부드러운 곡선</td></tr>
+<tr><td>Join</td><td>선들 머지해서 연결작업(후처리)/선 끝을 서로 연결</td></tr>
+<tr><td>Mirror</td><td>좌우 대칭</td></tr>
+<tr><td>Revolve</td><td>중심 축을 중심으로 곡선을 회전하여 표면을 만듬</td></tr>
+</tbody></table>
+</div>
 <ul>
 <li>
 <p>NURBS(Non-uniform rational basis spline)</p>
@@ -293,14 +293,6 @@
 <tr><td>value</td><td>start + increment * iteration</td></tr>
 </tbody></table>
 </div>
-<pre><code class="language-txt">point("../OUT_P", 0, "P", 1)  // OUT_P노드의 0번째의 point P의 Y좌표(xyz / 012)
-prim("../OUT_Cd", 2, "Cd", 0) // OUT_Cd노드의 2번째의 primitive Cd의 Red채널값(rgb / 012)
-opdigits(".") // 현재 노드의 이름의 숫자만 가져옴
-rand(x) // 랜덤. 분포가 일정하게 되는데 그럴때 사칙연산을 내부적으로 넣어주기도 함
-
-chramp("radious_ramp", @curveu) // 기어버튼으로 추가된 radious_ramp curveu의 위치 값을 가져온다
-detail("../META/", "iteration", 0) // META에 있는 iteration의 0번째 값
-</code></pre>
 <ul>
 <li><a href="https://www.sidefx.com/docs/houdini/copy/tutorial_stamping.html">https://www.sidefx.com/docs/houdini/copy/tutorial_stamping.html</a></li>
 </ul>
