deploy: 679ff1c8bc15808095a25a85c009b89c05fadfa7

--- a/print.html
+++ b/print.html
@@ -415,6 +415,7 @@ https://www.sidefx.com/download/daily-builds/</p>
 <tr><td>Pack</td><td>게임엔진에서 별도의 메쉬로 취급</td></tr>
 <tr><td>Unique Points/Point Split</td><td>Splits points shared by multiple vertices, optionally only if the vertices differ in attribute value. / PolyWire랑 쓰면 좋음</td></tr>
 <tr><td>Paint</td><td>페인팅</td></tr>
+<tr><td>Point</td><td>어트리뷰트 생성 ( point )   // 포인트에 Cd어트리 뷰트 생성시 유용</td></tr>
 </tbody></table>
 </div>
 <ul>
