deploy: 0891694678cc565c24f80dbcf96da76bff88774e

--- a/script/python.html
+++ b/script/python.html
@@ -160,8 +160,18 @@
                     <main>
                         <h1 id="python"><a class="header" href="#python">Python</a></h1>
 <ul>
-<li><a href="https://jtomori.github.io/2022/2022-07-07.html">https://jtomori.github.io/2022/2022-07-07.html</a></li>
-<li><a href="https://www.sidefx.com/docs/houdini/hom/commandline.html#hython">https://www.sidefx.com/docs/houdini/hom/commandline.html#hython</a></li>
+<li>
+<p><a href="https://jtomori.github.io/2022/2022-07-07.html">https://jtomori.github.io/2022/2022-07-07.html</a></p>
+</li>
+<li>
+<p><a href="https://www.sidefx.com/docs/houdini/hom/commandline.html#hython">https://www.sidefx.com/docs/houdini/hom/commandline.html#hython</a></p>
+</li>
+<li>
+<p>환경변수 확인</p>
+<ul>
+<li>Help &gt; About Houdini &gt; Show Details</li>
+</ul>
+</li>
 </ul>
 <pre><code class="language-txt">
 Windows &gt; Hscript Textport(Alt + Shift + T)
@@ -219,6 +229,83 @@ selected[0].setInput(0, selected[1], 0)
 import Pyside2 as ps
 
 </code></pre>
+<p>hou.playbar.play()
+hou.playbar.stop()</p>
+<p>hou.ui.displayMessage("HelloWorld")
+hou.ui.displayMessage("HelloWorld", buttons=("OK", "NO"))
+hou.ui.readInput("Read Input")</p>
+<p>hou.frame()
+hou.fps()</p>
+<p>hou.selectedNodes()</p>
+<p>hou.putenv("ENV_A", "VALUE_A")
+hou.unsetenv('A')
+hou.getenv("HIP")</p>
+<p>hou.hscript("opparm /obj/geo1 scale 10")</p>
+<p>n = hou.node("/obj/geo1")
+sphere = n.node("sphere1")</p>
+<p>node.parent()
+node.children()
+node.outputs()
+node.inputs()
+node.setInput(2, otherNode)
+node.setInput(2, None)
+node.color()
+node.setColor(hou.Color(1, 0, 0))
+node.setDisplayFlag(False)
+node.isGenericFlagSet(hou.nodeFlag.Display)
+node.setGenericFlagSet(hou.nodeFlag.Display, True)
+// https://www.sidefx.com/docs/houdini/hom/hou/nodeFlag.html</p>
+<p>node.type()
+node.createNode('attribwrangle')</p>
+<p>node.userDataDict()
+node.clearUserDataDict()
+node.setUserData('keyString', 'valueString')
+node.userData('keyString')
+node.destroyUserData('keyString')</p>
+<p>https://www.sidefx.com/docs/houdini/hom/hou/OpNode.html#user-data
+node.cachedUserDataDict()
+node.setCachedUserData('keyString', 'valueString')
+node.cachedUserData('keyString')
+node.destroyCachedUserData('keyString')</p>
+<p>node.asCode()</p>
+<p>node.name()
+node.setName('test')
+node.commnet()
+node.setComment('comment')
+node.appendComment('append comment')
+node.path()
+node.position()
+node.setPosition((0, 0)) // input : vector
+node.move((-1, -1))
+node.destroy()
+node.evalParm('proj')</p>
+<pre><code class="language-txt">// https://www.sidefx.com/docs/houdini/ref/env.html
+// https://www.sidefx.com/docs/houdini/hom/locations.html#startup 
+
+HH                    : The path to Houdini supporting scripts and files inside $HFS. Usually $HFS/houdini
+HOUDINI_PATH          : The path of directories where Houdini looks for configuration files.
+HOUDINI_USER_PREF_DIR : The directory to store user preference files. 
+
+</code></pre>
+<p>hou.parm     ("/obj/geo1/tx")
+hou.parm     ("/obj/geo1/scale")
+hou.parmTuple("/obj/geo1/t")
+p = hou.parm     ("/obj/geo1/scale")
+p.eval()
+p.evalAsString()
+p.isTimeDependent()
+p.evalAtFrame(10)
+p.set(5)
+p.name()
+p.node()
+p.pressButton()
+p.keyframes()
+p.keyframesAfter(20)
+p.deleteAllKeyframes()
+p.revertToDefault()
+p.expression()
+p.expressionLanguage()
+p.setExpression('print "Hello"', language=hou.exprLanguage.Python)</p>
 
                     </main>
 
