--- a/script/python.html
+++ b/script/python.html
@@ -239,7 +239,8 @@ hou.fps()</p>
 <p>hou.selectedNodes()</p>
 <p>hou.putenv("ENV_A", "VALUE_A")
 hou.unsetenv('A')
-hou.getenv("HIP")</p>
+hou.getenv("HIP")
+hou.hda.reloadAllFiles()</p>
 <p>hou.hscript("opparm /obj/geo1 scale 10")</p>
 <p>n = hou.node("/obj/geo1")
 sphere = n.node("sphere1")</p>
@@ -306,6 +307,86 @@ p.revertToDefault()
 p.expression()
 p.expressionLanguage()
 p.setExpression('print "Hello"', language=hou.exprLanguage.Python)</p>
+<p>node = hou.pwd()
+geo = node.geometry()
+geo.points()
+pt = geo.iterPoints()[0]
+pt.prims()
+pt.vertices()
+geo.attribValue('foo')
+geo.setGlobalAttribValue('foo', 5)
+pt.attribValue('foo')
+pt.setAttribValue('foo', 5)
+geo.addAttrib(hou.attribType.Prim, 'myattrib', 0.0, create_local_variable=False)</p>
+<p>pts = geo.createPoints([(0, 0, 0)])
+geo.deletePoints(pts)</p>
+<p>group = geo.findPointGroup('grp1')
+group = geo.createPointGroup('grp1')
+group.clear()
+group.destroy()</p>
+<p>p = geo.prim(0)
+p.intrinsicValue('typename')</p>
+<p>hou.ui.displayMessage("HelloWorld", serverity=hou.serverityType.ImportantMessage, help='help message', detail='detail','title='title')
+hou.ui.readMultiInput('wtf', ('1', '2', '3'))
+hou.ui.selectFile()
+hou.ui.selectFromList(('1', '2', '3'))
+hou.ui.selectFromTree(('a/1', 'a/2', '3'))
+hou.ui.selectNode()
+hou.ui.selectParm()
+hou.ui.selectParmTuple()
+hou.ui.selectAttrib()
+hou.ui.selectColor()
+hou.ui.setStatusMessage('hello world')</p>
+<p>import hou
+n = hou.node('/obj/hello')
+t = n.type()
+d = t.definition()
+group = d.parmTemplateGroup()
+group = hou.ParmTemplateGroup()
+n.setParmTemplateGroup()
+d.setParmTemplateGroup()</p>
+<pre><code class="language-python">import hou
+n = hou.node('/obj/geo1/transform1')
+
+new_n = n.parent().createNode(n.type().name(), f"{n.name()}_refcopy")
+new_n.setPosition(n.position())
+new_n.move((0.5, -0.5))
+new_n.setColor(hou.color((0.1, 0.1, 0.1)))
+
+group = new_n.parmTemplateGroup()
+source = hou.StringParmTemplate('ref_source', 'Reference Source', 1, string_type=hou.stringParmType.NodeRefernece, help='help text')
+group.insertBefore((0, ), source)
+new_n.setParmTemplateGroup(group)
+new_n.parm('ref_source').set(n.path())
+
+temp_list = [
+  hou.parm('obj/geo1/transform1_refcopy/scale'),
+  hou.parm('obj/geo1/transform1_refcopy/group'),
+  hou.parm('obj/geo1/transform1_refcopy/shear')
+]
+for p in temp_list:
+    if p.name() == 'ref_source':
+        continue
+    if p.parmTemplate().type() == hou.parmTemplateType.Folder:
+        continue
+    if p.parmTemplate().type() == hou.parmTemplateType.FolderSet:
+        continue
+
+    mode = kwargs['ctrlclick']
+
+    if mode:
+        expr = 'ch'
+        if p.parmTemplate().type() == hou.parmTemplateType.String:
+            expr = 'chs'
+        p.setExpression(f"{expr}(chs('ref_resource') + '/{p.name()}')")
+    else:
+        p.setExpression(f"hou.node(hou.pwd().evalParm('ref_source')).evalParm('{p.name()}')", language=exprLangauge.Python)
+</code></pre>
+<p>PythonModule
+def onInputChanged
+OnInputChanged
+kwargs['node'].hm().onInputChanged(kwargs) # hm - a shortcut for self.hdaModule(). - https://www.sidefx.com/docs/houdini/hom/hou/OpNode.html#hm</p>
+<p>hou.phm().SomeFunction()                     # hou.phm() == hou.pwd().hdaModule()</p>
 
                     </main>
 
